<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.medio.MedioFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayouts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:tabGravity="fill"
            app:tabMode="fixed">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabConocer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/conocer" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabGustas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/le_gustas" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabChat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chat" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabAmigos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amigos" />


        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/vP4"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.viewpager.widget.ViewPager>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>