<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardViewRecibido"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"


    android:layout_marginStart="12dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="60dp"
    android:orientation="horizontal"

    app:cardBackgroundColor="#222729"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tVCardTextRecibido"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:text="@string/enviado"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/iVCardFotoRecibido"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_margin="3dp"
            android:contentDescription="@string/todo"
            android:visibility="gone">

        </ImageView>

        <TextView
            android:id="@+id/tVCardHoraRecibida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="4dp"
            android:text="@string/hora"
            android:textColor="#9b9b9b"
            android:textSize="12sp" />
    </LinearLayout>

</androidx.cardview.widget.CardView>