<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".principales.LoginActivity">


    <Button
        android:id="@+id/bInicioSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_rounded"
        android:onClick="InicioSesion"
        android:text="@string/iniciar_sesion"
        android:textColor="@color/black"
        app:backgroundTint="@color/colorBotones"
        app:layout_constraintBottom_toTopOf="@+id/tVRegistrate"
        app:layout_constraintEnd_toEndOf="@+id/tVRegistrate"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="@+id/tVRegistrate" />

    <TextView
        android:id="@+id/tVRegistrate"
        android:layout_width="80dp"
        android:layout_height="31dp"
        android:layout_marginBottom="188dp"
        android:onClick="Registro"
        android:text="@string/registrate"
        android:textColor="@color/colorBotones"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/correoLogin"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:textColor="@color/colorBotones"
        android:textColorHint="@color/colorBotones"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98"
        android:autofillHints=""
        tools:targetApi="lollipop" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="376dp"
        android:ems="10"
        android:hint="@string/contrasenia"
        android:inputType="textPassword"
        android:textColor="@color/colorBotones"
        android:textColorHint="@color/colorBotones"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/bInicioSesion"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/bInicioSesion"
        android:autofillHints=""
        tools:targetApi="lollipop" />

</androidx.constraintlayout.widget.ConstraintLayout>