<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardViewEnviado"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="false"
    android:layout_gravity="end"
    android:layout_marginStart="180dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="12dp"
    android:layout_weight="0"
    android:orientation="horizontal"
    android:textAlignment="viewEnd"
    app:cardCornerRadius="4dp"
    app:layout_anchorGravity="end"
    app:layout_gravity="end">

    <LinearLayout
        android:id="@+id/golor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="#6745c2"
        android:foregroundGravity="right"
        android:gravity="end"
        android:orientation="horizontal"
        android:verticalScrollbarPosition="defaultPosition">

        <TextView
            android:id="@+id/tVCardTextEnviado"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/enviado"
            android:textAlignment="viewEnd"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/iVCardFotoEnviado"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_margin="3dp"
            android:contentDescription="@string/todo"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tVCardHoraEnviado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="4dp"
            android:gravity="end"
            android:text="@string/hora"
            android:textAlignment="viewEnd"
            android:textColor="#9b9b9b"
            android:textSize="12sp" />
    </LinearLayout>

</androidx.cardview.widget.CardView>