<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registrar.Registro1Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="Qué Género buscas?"
            android:textColor="@color/primario"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cBHombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/hombre" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="15dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/ico_hombre" />

            <CheckBox
                android:id="@+id/cBMujer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/mujer" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="34dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/ico_mujer" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cBPareja"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/pareja_hm" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/ico_pareja" />

            <CheckBox
                android:id="@+id/cBParejaMM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/pareja_mm" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="2dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/ico_pareja_mujeres" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cBParejaHH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/pareja_hh" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="3dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/ico_pareja_hombres" />

            <CheckBox
                android:id="@+id/cBOtros"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/otros" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="35dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/ico_otro_genero" />

        </LinearLayout>

        <TextView
            android:id="@+id/vistaEdad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="Qué Edad Buscas?"
            android:textColor="@color/primario"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="87dp"
                android:layout_height="wrap_content"
                android:text="Edad Minima" />

            <SeekBar
                android:id="@+id/edadMin"
                android:layout_width="236dp"
                android:layout_height="wrap_content"
                android:max="70"
                android:progress="22" />

            <TextView
                android:id="@+id/textEdadMin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="22" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="87dp"
                android:layout_height="wrap_content"
                android:text="Edad Maxima" />

            <SeekBar
                android:id="@+id/edadMax"
                android:layout_width="236dp"
                android:layout_height="wrap_content"
                android:max="70"
                android:progress="45" />

            <TextView
                android:id="@+id/textEdadMax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="45" />

        </LinearLayout>

        <Button
            android:id="@+id/bSiguienteA2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="192dp"
            android:onClick="BotonRegistro2"
            android:text="@string/siguiente" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>