<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardViewAmigos"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="false"
    android:layout_marginStart="8dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="8dp"
    android:orientation="horizontal"
    app:cardCornerRadius="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:background="#BF9F82BB"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iVFoto_Amigos"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="3dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/imagen_avatar"
            app:civ_border_color="@color/terciario"
            app:civ_border_width="2dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_weight="0"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tVNombre_Amigos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="2dp"
                    android:fontFamily="cursive"
                    android:gravity="bottom"
                    android:text="@string/amigo"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tVEstado_Amigos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:fontFamily="cursive"
                    android:gravity="top"
                    android:textColor="@color/white" />
            </LinearLayout>

            <TextView
                android:id="@+id/tVDescripcion_Amigos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="3dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:fontFamily="cursive"
                android:text="@string/descripcionHint"
                android:textColor="#BFFFFFFF" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>